--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ aiofiles==24.1.0
 aiogram==3.13.1
 aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
+aioredis==2.0.1
 aiosignal==1.3.1
 alembic==1.13.3
 annotated-types==0.7.0
 anyio==4.7.0
+async-timeout==5.0.1
 asyncpg==0.30.0
 attrs==24.2.0
 certifi==2024.8.30
@@ -35,6 +37,7 @@ pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+redis==5.2.1
 seaborn==0.13.2
 six==1.17.0
 sniffio==1.3.1
