--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,14 @@ services:
   bot:
     build: .
     restart: always
+    entrypoint: ["./scripts/entrypoint.sh"]
     depends_on:
       redis:
         condition: service_healthy
       db:
         condition: service_healthy
+    env_file:
+      - .env
     environment:
       - API_TOKEN=${API_TOKEN}
       - DB_DRIVER=postgresql+asyncpg
@@ -21,17 +24,68 @@ services:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
     volumes:
       - ./logs:/app/logs
+      - ./backups:/app/backups
     networks:
       - bot_network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+
+  celery:
+    build: .
+    command: celery -A app.celery_app.celery_app worker -l info
+    restart: always
+    depends_on:
+      redis:
+        condition: service_healthy
+      db:
+        condition: service_healthy
+    env_file:
+      - .env
+    environment:
+      - DB_DRIVER=postgresql+asyncpg
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - DB_HOST=db
+      - DB_NAME=${DB_NAME}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+    volumes:
+      - ./logs:/app/logs
+      - ./backups:/app/backups
+    networks:
+      - bot_network
+
+  celery-beat:
+    build: .
+    command: celery -A app.celery_app.celery_app beat -l info
+    restart: always
+    depends_on:
+      redis:
+        condition: service_healthy
+      db:
+        condition: service_healthy
+    env_file:
+      - .env
+    environment:
+      - DB_DRIVER=postgresql+asyncpg
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - DB_HOST=db
+      - DB_NAME=${DB_NAME}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+    volumes:
+      - ./logs:/app/logs
+      - ./backups:/app/backups
+    networks:
+      - bot_network
+
 
   db:
     image: postgres:17-alpine
     restart: always
+    env_file:
+      - .env
     environment:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASS}
@@ -50,6 +104,8 @@ services:
     image: redis:latest
     restart: always
     command: redis-server --requirepass ${REDIS_PASSWORD}
+    env_file:
+      - .env
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
     ports:
