--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
 
   celery:
     build: .
-    command: celery -A app.celery_app.celery_app worker -l info
+    command: celery -A app.tasks.celery_app.celery_app worker -l info
     restart: always
     depends_on:
       redis:
@@ -56,7 +56,7 @@ services:
 
   celery-beat:
     build: .
-    command: celery -A app.celery_app.celery_app beat -l info
+    command: celery -A app.tasks.celery_app.celery_app beat -l info
     restart: always
     depends_on:
       redis:
@@ -108,8 +108,6 @@ services:
       - .env
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
-    ports:
-      - "${REDIS_PORT}:${REDIS_PORT}"
     volumes:
       - redis_data:/data
     networks:
